k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: eliteshop
  labels:
    name: eliteshop
    environment: production
